--- a/src/demostyle.css
+++ b/src/demostyle.css
@@ -5,8 +5,13 @@ body {
     padding: 0;
 }
 
+#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .demo {
-    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
