--- a/src/demostyle.css
+++ b/src/demostyle.css
@@ -13,6 +13,7 @@ body {
 
 .demo {
     height: 100vh;
+    width: 110px;
     display: flex;
     align-items: center;
     justify-content: center;
